# Rest-Codegen

./: .gitignore  .travis.yml  README.md  What connexion does differently on top of flask:  app_config.py  main.py  petstore.yaml  requirements.txt  sample.yaml  setup.cfg  setup.py  tox.ini
SAMPLE/: build.py  user_config.py
builder/: main.py
classes/: __init__.py  callback.py  components.py  contact.py  discriminator.py  encoding.py  example.py  external_documentation.py  header.py  info.py  keyword_map.py  license_spec.py  link.py  media_type.py  oauth_flow.py  oauth_flows.py  operation.py  parameter.py  parse.py  path_item.py  paths.py  reference.py  request_body.py  response.py  responses.py  schema.py  security_requirement.py  security_scheme.py  server.py  server_variable.py  tag.py  xml.py
codegen/: __init__.py  app_config.py  classes.py  codegen_config.py  default_codegen.py  example_user_config.py  flask-codegen.py  flask_server_codegen.py  flask_templates_module.py  generate.py  iterators.py  main.py  main2.py  main_old.py  mymodule.py  newclasses.py  preprocessing.py  sample_build.py  template_context.py  testpaths.py  typescript_client_codegen.py  user_config.py  utils.py
models/: ApiResponse.py  Category.py  Order.py  Pet.py  Tag.py  User.py
notes/: connexion_notes.txt  notes.txt  paths.yaml  python-customization  servicetemplatenotes.ts  stores.yaml  template_context.txt  things_to_test.txt  todolist.txt  typescript-todo  users.yaml
sample/: openapi3.yaml
templates/: dep.tmpl  func.tmpl  lib.tmpl  models.tmpl  templates.py
tests/: conftest.py  (+5 more)
(+127 files in other folders)
